rustcc/tests/input/lexer/invalid/backtick.c
// RUN: ${{rustcc}} --print-tokens
// EXPECT-FAILURE

/* A backtick is not a valid token. */
`